2007-08-31  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* WelcomePageView.cs: Dispose resource streams, to avoid an exception in 
	  RecentChangesHandler that prevented opening projects.

2007-08-28  Mike Krüger <mkrueger@novell.com> 

	* WelcomePageView.cs, WelcomePageCommands.cs: Fixed 81660+82491: Crash when
	  opening the Welcome-Page manually.

2007-08-21  Mike Krüger <mkrueger@novell.com> 

	* WelcomePageView.cs: Fixed 82458: unable to open files that have a colon in
	  the path.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.mdp: Don't exclude the .addin file from the makefile.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePageView.cs: Removed the CommandService class. Everything is done
	  directly with CommandManager. Moved all extension node types to
	  MD.Components.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am: Yet another missing resource.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.addin.xml, WelcomePage.mdp, Makefile.am: Reorganized the
	  extension point hierarchy. Embedded all add-in manifests as resources.

2007-06-19  Mike Krüger <mkrueger@novell.com> 

	RecentItems now use the .NET classes for Uri and DateTime and hides some details of the freedesktop recent file management.

2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.mdp: Added ChangeLog file to project.

2007-05-21  Ankit Jain  <jankit@novell.com>

	* WelcomePageView.cs (CatchUri): Destroy dialog.

2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.mdp: Copy the .addins.xml file to the output dir.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.addin.xml: Migration to Mono.Addins.

2007-04-26  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.mdp: Don't copy referenced assemblies.

2007-02-20  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePageView.cs: Avoid start loading a project if one is already
	  being loaded.
