@@ -15,13 +15,13 @@ namespace MonoDevelop.WelcomePage
 			this.Add(vbox);
 			
 			showOnStartCheckButton.Label = GettextCatalog.GetString ("Show welcome page on startup");
-			showOnStartCheckButton.Active = Runtime.Properties.GetProperty("WelcomePage.ShowOnStartup", true);
+			showOnStartCheckButton.Active = PropertyService.Get("WelcomePage.ShowOnStartup", true);
 			vbox.PackStart(showOnStartCheckButton, false, false, 0);
 		}
 		
 		public override bool StorePanelContents()
 		{
-			Runtime.Properties.SetProperty("WelcomePage.ShowOnStartup", showOnStartCheckButton.Active);
+			PropertyService.Set("WelcomePage.ShowOnStartup", showOnStartCheckButton.Active);
 			return true;
 		}
 	}
